  - Used another system to suspend any call to an API when the statistics
    are reset.
  - Removed _PerformGC metafunction.
  - Removed support for XSLT transformations.
  - Changed access level of field _api in class Function from protected to
    private. Subclasses should use getAPI() to get a reference to the API
    object. This may break existing code.

* XINS/Java Common Library:
  - Small refactoring in ServiceCaller.doCall(Object) that should have no
    impact on behaviour.
  - Fixed argument for log message 3312. Now actually sending the URL instead
    of the textual representation of the TargetDescriptor.
  - Minor change to translation of log messages 3312 and 3313.
  - Narrowed the definition of a service caller to TCP-based services.
  - Changed the interface and rewrote the implementation of the service caller
    framework in package org.xins.common.service.
  - Removed deprecated method execute(Thread,int) from class
    TimeOutController.
  - Removed TODO entries that are done or no longer relevant.
  - Added more logs for the Doorman.
  - The Properties type now returns a PropectedPropertyReader instead of the
    BasicPropertyReader.
  - Removed method serialize(PropertyReader,LogdocStringBuffer) from class
    PropertyReaderUtils and replaced it with
    serialize(PropertyReader,FastStringBuffer,String). The former was not used
    anywhere.
  - Removed method getTimeOut() in class TargetDescriptor. It was deprecated
    and replaced by getTotalTimeOut() in XINS 0.202.

* XINS/Java Client Framework:
  - Added some Javadoc to the ResultParser class.
  - Using the new service caller framework.
  - Supporting checking of HTTP status codes.
  - Removed AbstractCAPI(XINSServiceCaller). This constructor was deprecated
    since XINS 0.192.

* Logdoc
  - An error is thrown when you register a log that doesn't support the
    current locale.
  - Changed levels for log message entry 1404 from INFO to DEBUG.

* Generated java code: