@@ -58,10 +58,6 @@ final class CallResultOutputter extends Object {
     * @param result
     *    the call result to convert to XML, cannot be <code>null</code>.
     *
-    * @param compatibility
-    *    the compatibility format for the generated output,
-    *    can be <code>null</code>.
-    *
     * @throws IllegalArgumentException
     *    if <code>out      == null
     *          || encoding == null
@@ -72,8 +68,7 @@ final class CallResultOutputter extends Object {
     */
    public static void output(PrintWriter    out,
                              String         encoding,
-                             FunctionResult result,
-                             String         compatibility)
+                             FunctionResult result)
    throws IllegalArgumentException, IOException {
 
       // Check preconditions
@@ -95,21 +90,6 @@ final class CallResultOutputter extends Object {
       String code = result.getErrorCode();
       if (code != null) {
          xmlout.attribute("errorcode", code);
-      }
-
-      if (compatibility != null && compatibility.equals("alpha")) {
-
-         if (code != null) {
-            // XXX: For backwards compatibility, write the error code in the
-            //      'code' attribute and set the 'success' attribute to 'false'
-            xmlout.attribute("code", code);
-            xmlout.attribute("success", "false");
-
-         // XXX: For backwards compatibility, set the 'success' attribute to
-         //      'true'
-         } else {
-            xmlout.attribute("success", "true");
-         }
       }
 
       // Write the output parameters
